暗号化アルゴリズムの変更・暗号処理の内部フローを修正